update enbedded vidoe format

--- a/MyFirstHTML.html
+++ b/MyFirstHTML.html
@@ -43,7 +43,12 @@
 
     <h2>Embeded Music Video</h2>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/WTsScStbEp8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" 
+            src="https://www.youtube.com/embed/WTsScStbEp8" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+    </iframe>
 
 
     <h2>Animal Table</h2>
